@@ -15,17 +15,18 @@ export(Hershey, as.graphicsAnnot, boxplot.stats, check.options, chull,
        colorRampPalette, contourLines, convertColor, colorConverter,
        colorspaces, cm.colors, dev.control, dev.copy, dev.copy2eps,
        dev.cur, dev.interactive, dev.list, dev.next, dev.off,
-       dev.prev, dev.print, dev.set, deviceIsInteractive, embedFonts,
-       extendrange, getGraphicsEvent, graphics.off, gray, grey,
-       gray.colors, grey.colors, heat.colors, hsv, hcl, make.rgb,
-       n2mfrow, nclass.Sturges, nclass.FD, nclass.scott, palette, pdf,
-       pdf.options, pdfFonts, pictex, postscript, postscriptFont,
-       postscriptFonts, ps.options, rainbow, recordGraphics,
-       recordPlot, replayPlot, rgb, rgb2hsv, terrain.colors,
-       topo.colors, trans3d, Type1Font, xfig, xyTable, xy.coords,
-       xyz.coords)
+       dev.prev, dev.print, dev.set, dev2bitmap, deviceIsInteractive,
+       embedFonts, extendrange, getGraphicsEvent, graphics.off, gray,
+       grey, gray.colors, grey.colors, heat.colors, hsv, hcl,
+       make.rgb, n2mfrow, nclass.Sturges, nclass.FD, nclass.scott,
+       palette, pdf, pdf.options, pdfFonts, pictex, postscript,
+       postscriptFont, postscriptFonts, ps.options, rainbow,
+       recordGraphics, recordPlot, replayPlot, rgb, rgb2hsv, setEPS,
+       setPS, terrain.colors, topo.colors, trans3d, Type1Font, xfig,
+       xyTable, xy.coords, xyz.coords)
 
-export(X11, x11, bitmap, dev2bitmap, jpeg, png)
+## devices common to all platforms
+export(X11, x11, bitmap, jpeg, png)
 
 S3method(print, recordedplot)
 S3method(print, colorConverter)
